# miniagent-main

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  examples.py  main_mini.py  pyproject.toml  requirements.txt  test_mini.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  deployment.md  learning-guide.md  project-structure.md
mini_agent/: __init__.py  agent.py  llm.py  logging_config.py  schema.py  tools.py
